style.css
*{
  margin: 0; 
  padding: 0;

}

body {
background-color: rgb(240, 240, 240);
margin: 0;
font-family: 'Raleway', sans-serif;
overflow-y: hidden;
display: flex;
}
body.dark {
  background-color: rgb(0, 0, 0);
}



#editor-container {
padding-top: 20px;
padding-left: 120px;
height: 100vh;
width: 73vw;
background-color: rgb(240, 240, 240);
border-right: none;
}

/* background: #ECE9E6; */  /* fallback for old browsers */
/* background: -webkit-linear-gradient(to left, #FFFFFF, #ECE9E6); */  /* Chrome 10-25, Safari 5.1-6 */
/* background: linear-gradient(to left, #FFFFFF, #ECE9E6); */ /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */

.ql-editor::before {
 padding-left: 120px;
} 

div.ql-editor{
padding-right: 120px;
}

div.ql-editor::-webkit-scrollbar-track{
  /* -webkit-box-shadow: inset 0 0 3px rgba(0,0,0,0.3); */
  border-radius: 2px;
  background-color: whitesmoke;
}

div.ql-editor::-webkit-scrollbar{
  width: 12px;
  background-color: #F5F5F5;
}

div.ql-editor::-webkit-scrollbar-thumb{
  border-radius: 10px;
  /* -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.2); */
  background-color: lightgrey;
}

.sideBar{
display: flex;
flex-direction: row;
margin: 0;
width: 115px;
float: left;
}

#sideNav{
display: block;
background: rgb(59, 60, 65);
height: 100vh;
width: 115px;
z-index: 1;
}

.quireLogo {
display: flex;
justify-content: space-around;
padding-top: 12px;
}
.quireLogoSvg {
height: 82px;
}

.sidenavbuttons {
display: flex;
flex-direction: column;
margin-top: 50px;
}
#helpBtn {
border: none;
outline: none;
background: none;
font-size: 13px;
padding: 10px 45px 10px 0px;
/* background-color: lightblue;  */
 /* width: 115px; */
}
#helpBtn:hover {
background-color: darkcyan;
}
.help-icon {
height: 16px;
}


#printBtn{
height: 39px;
border: none;
outline: none;
background: none;
font-size: 13px;
padding: 10px 45px 10px 3px;
/* background-color: lightblue; */ 
/* width: 115px; */
}
#printBtn:hover{
background-color: darkcyan;  
}
.print-icon {
height: 20px;
}
.print-self-text {
padding-top: 2px;
}

#favouriteBtn {
border: none;
outline: none;
background: none;
padding: 10px 10px 10px 0px;
/* background-color: lightblue; */ 
width: 115px;
font-size: 13px;
}

#favouriteBtn:hover{
background-color: darkcyan;
}
.fav-icon {
height: 16px;
}
.favActive {
background-color: darkcyan !important;
}
.button-text {
float: right;
margin-right: 6px;
height: 20px;
color: rgb(223, 219, 219);
}

#deletedBtn {
height: 39px;
border: none;
outline: none;
background: none;
font-size: 13px;
padding: 10px 25px 10px 0px;
width: 115px; 
}

#deletedBtn:hover{
background-color: darkcyan;
}
.del-icon {
height: 20px;
}
.delActive {
background-color: darkcyan !important;
}
.del-self-text {
margin-top: 2px;
}

.darkMode-icon {
  height: 16px;
}

.noteSection {
background-color: rgb(240, 240, 240);
display: column;
flex-direction: row;
height: 100vh;
} 

#innerSideBar{
display: flex;
flex-direction: column;
background-color: rgb(240, 240, 240);
height: 100vh;
width: 252px;
border: none;
/* margin-top: 44px; */
overflow-y: auto;
overflow-x: hidden;
margin: 0px;

}
#leftSection {
display: flex;
flex-direction: column;
}

#innerSideBar::-webkit-scrollbar-track{
  /* -webkit-box-shadow: inset 0 0 3px rgba(0,0,0,0.3); */
  background-color: whitesmoke;
}

#innerSideBar::-webkit-scrollbar{
  width: 12px;
  background-color: #F5F5F5;
}

#innerSideBar::-webkit-scrollbar-thumb{
  border-radius: 10px;
  /* -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.2); */
  background-color: lightgrey;
}

.note {
flex-shrink: 0;
color: black;
display: block;
height: 100px;
background-color: rgb(233, 233, 233);
border-left: 7px solid rgb(233, 233, 233);
user-select: none;
transition: background-color 100ms linear;
border-bottom: 1px solid grey;
}

.selected {
  background-color: whitesmoke; 
  border-left: 7px solid darkcyan;
}

.searchNotes {
display: flex;
flex-direction: row;
justify-content: space-between;
height: 42px;
width: 252px;
border-bottom: solid lightgrey 1px;
}

#searchInput{
-moz-appearance: none;
-webkit-appearance: none;
appearance: none;
width: 170px;
height: 26px;
border-radius: 6px;
margin-left: 18px;
margin-top: 8px;
padding-left: 15px;
padding-right: 6px;
border: 1px solid rgb(153, 152, 152); 
outline: none;
background-color: whitesmoke;
}

#searchInput::placeholder{
  color: grey ;
  font-size: 13px;
}

.addNote {
border: none;
position: relative; 
height: 23px;
margin-top: 7px;
margin-right: 11px;
outline: none;
background-color: whitesmoke;
}

.addNoteSvg {
height: 23px;
transition: filter 0.07s ease-in-out;
opacity: 0.8;
margin-top: 2px;

}

.addNoteSvg:active {
filter: invert(.5) sepia(1) saturate(5) hue-rotate(175deg);
}

#showHideBtn{
display: none;
position: absolute;
border: none;
outline: none;
background: none;
font-size: 40px;
z-index: 3; /* temporär för att visa hamburgaren vid datorskärm */
}

#showHideBtn::after{
border: none;
outline: none;
background: none;
font-size: 40px;
background: red;
}

.modal {
  display: none; /* Hidden by default */
  position: fixed; /* Stay in place */
  /* z-index: 1; Sit on top */
  padding-top: 100px; /* Location of the box */
  top: 0;
  left: 0;
  width: 100%; /* Full width */
  height: 100%; /* Full height */
  overflow: auto; /* Enable scroll if needed */
  background-color: rgba(0,0,0,0.4);
}
.text-icon {
height: 23px;
margin: 3px;
}

.ql-toolbar.ql-snow {
  border-left:none !important;
  border-top:none !important;
  border-right: none !important;
  height: 43px;
}

.info-text {
  color: black;
  background-color: whitesmoke;
  margin: auto;
  border: 2px solid black;
  height: 50vh;
  width: 50vw;
  position: relative;
  border-radius: 10px;
   padding-bottom: 25px;
}
.info-text #info-text-text {
  padding: 40px;
  font-size: 13px;
  margin-left: 25px;
}
.tox .tox-notification {
  display: none !important; 
}
.tox .tox-notification--in{
  opacity: 0 !important;
  display: none !important;
}

.delete-button {
  border: none;
  float: right;
  z-index: 1;
}

.pDate{
font-size: 13px;
opacity: 0.5;
width: 170px;
color: black;
order: 2; /* funkar ej */
margin-bottom: 0px;
padding: 2px 1px 1px 14px;
}

.noteTitle {
  width: 210px;
  height: 20px;
  padding: 5px 0px 0px 16px;
  font-size: 17px;
  font-weight: bold;
  overflow: hidden;
}
.notePreview {
  width: 200px;
  height: 40px;
  padding: 10px 0px 0px 20px;
  font-size: 14px;
  opacity: 0.6;
  line-height: 1.2;
  overflow: hidden;
}
/* .editor {
  position: absolute;
  right: 0px;
  left: 367px;
} */

.backgroundBlur > *:not(#myModal) { /* selecting whole document except #myModal */
filter: blur(3px);
transition: 0.3s ease;
}

.fav-icon-note {
height: 17px;
opacity: 0.5;
margin: 0px 4px 2px 0px;
}

#fav-button-note{
  height: 23px;
  background: none;
  border: none;
  float: right;
  z-index: 1;
  outline: none;
}


.del-icon-note {
border: none;
height: 21px;
opacity: 0.5;
margin: 0px 2px 7px 0px;
}

.del-button-note {
border:none;
float: right;
background: rgba(0, 0, 0, 0.0);
height: 29px;
outline: none;
}



/* @media only screen 
and (min-width: 375px)
and (max-width: 812px) {
  #showHideBtn {
    display: inline-block;
  }
  .sideBar {
        display: none;
  }
  #leftSection {
    display: none;
  }

#editor-container {
padding-top: 20px;
padding-left: 20px;
padding-right: 20px;
height: 85vh;
width: 100vw;
background-color: rgb(240, 240, 240);
border-right: none;
}
.editor {
  position: absolute;
  top: 50px;
}
} */



@media print {
  @page { 
    margin: 0;
    width: 100%;
   }

   body{
    margin: 1cm;
    margin-right: 0cm;
    margin-left: 0cm;
   }

#sideBar, #sideNav, #innerSideBar, .ql-toolbar , .searchNotes {
  display: none;
}

#editor-container {
  border: none;
}

#editor-container {
  margin: 0;
  width: 100%;
  float: none;
}
}

/* @media only screen 
and (min-device-width : 375px) 
and (max-device-width : 812px)
and (-webkit-device-pixel-ratio : 3) {
}
 */

@media screen 
and (min-width: 768px) 
and (max-width: 1024px) {

body {
  display: grid;
  grid-template-rows: 20% 70% 1fr;
  grid-template-columns: 26.5% 74%;
  margin: 0 auto;
}

.sideBar, #sideNav, .sidenavbuttons{
  display: flex;
  grid-column: 1/2;
  grid-row: 3;
  border: 1px solid red;
  flex-direction: row;
  justify-content: space-evenly;
  height: 50px;
  width: 100vw;
}

.sidenavbuttons{
  margin-top: 0px;
}

.noteSection{
  grid-row: 1/2;
  grid-column: 1;
  border: 1px solid red;
  width: 200px;
}

#editor-container{
  grid-row: 2;
  grid-column: 3;
  height: 90vh;
  padding: 0px;
  /*
  padding-top: 20px;
padding-left: 120px;
height: 100vh;

background-color: rgb(240, 240, 240);
border-right: none;
}*/
}

#ql-editor{
  grid-column: 2;
  grid-row: 2;
}

#innerSideBar{
  grid-column: 1;
  grid-row: 2;
  grid-template-columns: 1;
  grid-template-rows: repeat();
  border: 1px solid red;  
  width: 200px;
  grid-gap: 0;

/*   display: flex;
flex-direction: column;
background-color: rgb(240, 240, 240);
height: 100vh;
width: 252px;
border: none;
overflow-y: auto;
overflow-x: hidden;
margin: 0px; */
}

.ql-toolbar.ql-snow {
  border-left:none !important;
  border-top:none !important;
  border-right: none !important;
  height: 88px;
  grid-row: 1;
  grid-column: 2;
}

.note {
flex-shrink: 0;
color: black;
display: block;
height: 100px;
background-color: rgb(233, 233, 233);
border-left: 7px solid rgb(233, 233, 233);
user-select: none;
transition: background-color 100ms linear;
border-bottom: 1px solid grey;
}

.editor{
  grid-row: 1;
  grid-column: 2;
  border: 1px solid red;
  /* display: flex;
  flex-direction: row; */
  /* flex-wrap: wrap; */
}

.searchNotes{
  border: 1px solid red;
  /* display: grid; */
  grid-row: 1;
  grid-column: 1;
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  height: 42px;
  width: 200px;
  border-bottom: solid lightgrey 1px;
}

#searchInput{
  width: 90px;
  padding: 0;
  margin-left: 8px;
  margin-top: 8px;
/* 
-moz-appearance: none;
-webkit-appearance: none;
appearance: none;
width: 170px;
height: 26px;
border-radius: 6px;
margin-left: 18px;
margin-top: 8px;
padding-left: 15px;
padding-right: 6px;
border: 1px solid rgb(153, 152, 152); 
outline: none;
background-color: whitesmoke; */
}

.addNote{
    display: flex;
    justify-content: right;
    /* border: 1px solid red; */
    display: grid; 
    grid-row: 1;
    grid-column: 1;
    /* padding-right: 60px; */

  }
  
.selected {
  background-color: whitesmoke; 
  border-left: 7px solid darkcyan;
}

.pDate{
  width: 150px;
}

.notePreview {
  
}
.noteTitle {

}



}

